--- a/client/class-list.html
+++ b/client/class-list.html
@@ -5,11 +5,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="./pages/class-list/class-list.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css"
         integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <title>Danh Sách Lớp</title>
+    <title>Danh sách lớp</title>
 </head>
 
 <body>
@@ -30,19 +30,19 @@
                         <a href="#">MENU</a>
                     </li>
                     <li>
-                        <a href="#">Danh Sách Sinh Viên</a>
+                        <a href="./student-list.html">Danh Sách Sinh Viên</a>
                     </li>
                     <li class = "active">
-                        <a href="#">Danh Sách Lớp</a>
+                        <a href="./class-list.html">Danh Sách Lớp</a>
                     </li>
                     <li>
-                        <a href="#">Bảng Điểm Môn Học</a>
+                        <a href="./subject-score-table.html">Bảng Điểm Môn Học</a>
                     </li>
                     <li>
-                        <a href="#">Báo Cáo Tổng Kết Môn</a>
+                        <a href="./subject-report.html">Báo Cáo Tổng Kết Môn</a>
                     </li>
                     <li>
-                        <a href="#">Báo Cáo Tổng Kết Học Kì</a>
+                        <a href="./semester-report.html">Báo Cáo Tổng Kết Học Kì</a>
                     </li>
                 </ul>
             </div>
