--- a/client/semester-report.html
+++ b/client/semester-report.html
@@ -5,11 +5,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="subject_report.css">
+    <link rel="stylesheet" href="./pages/subject-report/subject-report.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css"
         integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <title>Danh Sách Lớp</title>
+    <title>Báo cáo học kì</title>
 </head>
 
 <body>
@@ -30,19 +30,19 @@
                         <a href="#">MENU</a>
                     </li>
                     <li>
-                        <a href="#">Danh Sách Sinh Viên</a>
+                        <a href="./student-list.html">Danh Sách Sinh Viên</a>
                     </li>
                     <li>
-                        <a href="#">Danh Sách Lớp</a>
+                        <a href="./class-list.html">Danh Sách Lớp</a>
                     </li>
                     <li>
-                        <a href="#">Bảng Điểm Môn Học</a>
-                    </li>
-                    <li class="active">
-                        <a href="#">Báo Cáo Tổng Kết Môn</a>
+                        <a href="./subject-score-table.html">Bảng Điểm Môn Học</a>
                     </li>
                     <li>
-                        <a href="#">Báo Cáo Tổng Kết Học Kì</a>
+                        <a href="./subject-report.html">Báo Cáo Tổng Kết Môn</a>
+                    </li>
+                    <li class = "active">
+                        <a href="./semester-report.html">Báo Cáo Tổng Kết Học Kì</a>
                     </li>
                 </ul>
             </div>
@@ -52,29 +52,19 @@
                 <h1>STUDENT SYSTEM MANAGER</h1>
             </div>
             <div class="class-title">
-                <p>Báo Cáo Tổng Kết Môn</p>
-                <span>Thông tin tổng kết môn học</span>
+                <p>Báo Cáo Tổng Kết Học Kỳ</p>
+                <span>Thông tin tổng kết Học Kỳ</span>
             </div>
             <div class="select">
-                <div class="select-subject">
-                    <span>Chọn môn : </span>
-                    <select name="" class="select-class">
-                        <option value="0">Toán</option>
-                        <option value="1">Lí</option>
-                        <option value="2">Hóa</option>
-                        <option value="3">Văn</option>
-                        <option value="4">Sử</option>
-                        <option value="5">Địa</option>
-                    </select>
-                </div>
                 <div class="select-semester">
                     <span>Chọn học kì : </span>
                     <select name="" class="select-class">
                         <option value="0">1</option>
                         <option value="1">2</option>
                     </select>
+                    <button>Xem</button>
                 </div>
-                <button>Xem</button>
+                
             </div>
 
             <div class="main-content">
@@ -83,10 +73,7 @@
                         <table style="width:100%">
                             <thead>
                                 <tr>
-                                    <th style="text-align:left;height:30px;" colspan="3"> Môn:
-                                        <span>................</span>
-                                    </th>
-                                    <th style="text-align:left;height:30px;" colspan="2"> Học kì:
+                                    <th style="text-align:left;height:30px;" colspan="5"> Môn:
                                         <span>................</span>
                                     </th>
                                 </tr>
